<resources>
    <string name="app_name">BrainTest</string>
    <string name="quiz_time">Quiz Time!</string>
    <string name="question_no">Question no.</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="result">Result</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
</resources>