<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg2"
    tools:context=".QuestionDisplayActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:backgroundTint="#BBE1FA">

                <TextView
                    android:id="@+id/tvQuestionNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="5dp"
                    android:padding="5dp"
                    tools:text="@string/question_no"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic|bold"
                tools:text="Question"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                />

            <Button
                android:id="@+id/btnOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Option 1"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textColor="#4f4f4f"
                android:backgroundTint="#BBE1FA"
                android:onClick="setOption" />

            <Button
                android:id="@+id/btnOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Option 2"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textColor="#4f4f4f"
                android:backgroundTint="#BBE1FA"
                android:onClick="setOption"
                />
            <Button
                android:id="@+id/btnOption3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Option 3"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textColor="#4f4f4f"
                android:backgroundTint="#BBE1FA"
                android:onClick="setOption"
                />
            <Button
                android:id="@+id/btnOption4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Option 4"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:textColor="#4f4f4f"
                android:backgroundTint="#BBE1FA"
                android:onClick="setOption"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:text="@string/clear"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/c1"
                    />
                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/c1"
                    />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>